--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ padding:0;
 
 p{
 	text-align: justify;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	 line-height: 1.6;
 }
 
 a{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 }
 
@@ -44,7 +44,7 @@ min-height: 100vh;
 #author{
 	color:grey;
 	font-size: 17px;
-	font-family: 'Montserrat';
+	font-family: 'Lato';
 	text-align: center;
 }
 
@@ -107,7 +107,7 @@ height: 450px;
 }
 
 .subheading{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 17px;
 }
 
@@ -117,23 +117,23 @@ height: 450px;
 }
 
 h1{
-font-family: 'Montserrat', sans-serif;
+font-family: 'Lato', sans-serif;
 font-weight: bolder; 
 text-align: center;
 
 }
 
 h2{
-font-family: 'Montserrat', sans-serif; 
+font-family: 'Lato', sans-serif; 
 font-style: italic; 
 }
 
 h3{
-	font-family: 'Montserrat', sans-serif; 
+	font-family: 'Lato', sans-serif; 
 	}
 
 h5{
-	font-family: 'Montserrat', sans-serif; 
+	font-family: 'Lato', sans-serif; 
 	font-style: italic; 
 	text-align: center;
 	}
