--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ min-height: 100vh;
 #author{
 	color:grey;
 	font-size: 17px;
-	font-family: 'Lato';
+	font-family: 'Montserrat';
 	text-align: center;
 }
 
