--- a/style.css
+++ b/style.css
@@ -117,23 +117,23 @@ height: 450px;
 }
 
 h1{
-font-family: 'Nunito', sans-serif;
+font-family: 'Quicksand', sans-serif;
 font-weight: bolder; 
 text-align: center;
 
 }
 
 h2{
-font-family: 'Nunito', sans-serif; 
+font-family: 'Quicksand', sans-serif; 
 font-style: italic; 
 }
 
 h3{
-	font-family: 'Nunito', sans-serif; 
+	font-family: 'Quicksand', sans-serif; 
 	}
 
 h5{
-	font-family: 'Nunito', sans-serif; 
+	font-family: 'Quicksand', sans-serif; 
 	font-style: italic; 
 	text-align: center;
 	}
