--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ height: 450px;
 }
 
 h1{
-font-family: 'Quicksand', sans-serif;
+font-family: 'Dosis', sans-serif;
 font-weight: bolder; 
 text-align: center;
 
