--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ min-height: 100vh;
 #author{
 	color:grey;
 	font-size: 17px;
-	font-family: 'Raleway';
+	font-family: 'Dosis';
 	text-align: center;
 }
 
@@ -53,7 +53,6 @@ height:50px;
 
  padding: 10px;
  box-shadow: 0px 2px 18px #F5F5F5;
-/*font-family: 'Montserrat', sans-serif;*/
 
 }
 
