--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ padding:0;
 
 p{
 	text-align: justify;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	font-size: 16px;
 	 line-height: 1.6;
 }
 
 a{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	font-size: 14px;
 }
 
