--- a/style.css
+++ b/style.css
@@ -1,140 +1,141 @@
 
 html, body {
-margin:0;
-padding:0;
-}
-
-p{
-	text-align: justify;
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 16px;
-	 line-height: 1.6;
-}
-
-a{
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 14px;
-}
-
-.wrapper{
-
-	width:90%;
-	margin-left: 5%;
-	margin-right: 5%;
-
-}
-
-.background{
-/*height: 1000px;*/
-background-color:#F5F5F5;
-padding-top:30px;
-text-align: center;
-display: flex;
-flex-direction: column;
-min-height: 100vh;
-
-}
-
-.indent{
-
-	 padding-left: 50px ;
-	text-indent: -50px ;
-}
-
-#author{
-	color:grey;
-	font-size: 17px;
+	margin:0;
+	padding:0;
+	}
+	
+	p{
+		text-align: justify;
+		font-family: 'Quicksand', sans-serif;
+		font-size: 16px;
+		 line-height: 1.6;
+	}
+	
+	a{
+		font-family: 'Quicksand', sans-serif;
+		font-size: 14px;
+	}
+	
+	.wrapper{
+	
+		width:90%;
+		margin-left: 5%;
+		margin-right: 5%;
+	
+	}
+	
+	.background{
+	/*height: 1000px;*/
+	background-color:#F5F5F5;
+	padding-top:30px;
 	text-align: center;
-}
-
-#header{
-height:50px;
-
- padding: 10px;
- box-shadow: 0px 2px 18px #F5F5F5;
-
-}
-
-#titlebox{
-	width:700px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.textwrapper{
-
-	width:700px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 50px;
-	margin-bottom:100px;
-	background-color: white;
-}
-
-.dataexamples{
-	width:49%;
-}
-
-.resultexamples{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	
+	}
+	
+	.indent{
+	
+		 padding-left: 50px ;
+		text-indent: -50px ;
+	}
+	
+	#author{
+		color:grey;
+		font-size: 17px;
+		text-align: center;
+	}
+	
+	#header{
+	height:50px;
+	
+	 padding: 10px;
+	 box-shadow: 0px 2px 18px #F5F5F5;
+	
+	}
+	
+	#titlebox{
+		width:700px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	.textwrapper{
+	
+		width:700px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 50px;
+		margin-bottom:100px;
+		background-color: white;
+	}
+	
+	.dataexamples{
+		width:49%;
+	}
+	
+	.resultexamples{
+		width:100%;
+		margin-top:40px;
+		margin-bottom: 40px;
+	}
+	
+	#resultstext{
+	/*width:350px;*/
+	}
+	
+	.resultswrapper{
 	width:100%;
-	margin-top:40px;
-	margin-bottom: 40px;
-}
-
-#resultstext{
-/*width:350px;*/
-}
-
-.resultswrapper{
-width:100%;
-height: 450px;
-}
-
-.inner{
-	width: 350px;
-	float:left;
-}
-
-.g-50{
-	width:85%;
-	margin-left:7.5%;
-	margin-right: 7.5%;
-	margin-bottom: 10px;
-	margin-top: 10px;
-	/*position: float;*/
-}
-
-.subheading{
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 17px;
-}
-
-#description{
-	font-size: 12px;
-	text-align: center;
-}
-
-h1{
-font-family: 'Ubuntu', sans-serif;
-font-weight: bolder; 
-text-align: center;
-
-}
-
-h2{
-font-family: 'Ubuntu', sans-serif;  
-}
-
-h3{
-	font-family: 'Ubuntu', sans-serif; 
+	height: 450px;
 	}
-
-h5{
-	font-family: 'Ubuntu', sans-serif; 
-	font-style: italic; 
-	text-align: center;
+	
+	.inner{
+		width: 350px;
+		float:left;
 	}
-
-
-
-
+	
+	.g-50{
+		width:85%;
+		margin-left:7.5%;
+		margin-right: 7.5%;
+		margin-bottom: 10px;
+		margin-top: 10px;
+		/*position: float;*/
+	}
+	
+	.subheading{
+		font-family: 'Quicksand', sans-serif;
+		font-size: 17px;
+	}
+	
+	#description{
+		font-size: 12px;
+		text-align: center;
+	}
+	
+	h1{
+	font-family: 'Quicksand', sans-serif;
+	font-weight: bolder; 
+	text-align: center;
+	
+	}
+	
+	h2{
+	font-family: 'Quicksand', sans-serif;  
+	}
+	
+	h3{
+		font-family: 'Quicksand', sans-serif; 
+		}
+	
+	h5{
+		font-family: 'Quicksand', sans-serif; 
+		font-style: italic; 
+		text-align: center;
+		}
+	
+	
+	
+	
+	
